--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,7 @@ services:
       context: ../core-user-data-store/
     environment:
       - DB_URI=postgresql+psycopg2://user_data_store:password@db:5432/user_data_store
-      - API_KEY="demo-user-data-store-api-key"
-      - ALLOWED_API_KEYS="demo-authentication-service-api-key, demo-management-layer-api-key"
+      - ALLOWED_API_KEYS=demo-authentication-service-api-key,demo-management-layer-api-key
     volumes:
       - ../core-user-data-store/:/app/
     ulimits:
@@ -31,8 +30,7 @@ services:
       context: ../core-access-control/
     environment:
       - DB_URI=postgresql+psycopg2://access_control:password@db:5432/access_control
-      - API_KEY="demo-access-control-api-key"
-      - ALLOWED_API_KEY="demo-authentication-service-api-key, demo-management-layer-api-key"
+      - ALLOWED_API_KEYS=demo-authentication-service-api-key,demo-management-layer-api-key
     volumes:
       - ../core-access-control/:/app/
     restart: on-failure
@@ -59,68 +57,69 @@ services:
       - WAGTAIL_1_IP=http://wagtail-demo-1:8000/oidc/callback/
       - WAGTAIL_2_IP=http://wagtail-demo-2:8000/oidc/callback/
       - CELERY_BROKER_URL=redis://redis:6379/0
-      - API_KEY="demo-authentication-service-api-key"
-      - ALLOWED_API_KEYS="demo-management-layer-api-key"
+      - USER_DATA_STORE_API_KEY=demo-authentication-service-api-key
+      - ACCESS_CONTROL_API_KEY=demo-authentication-service-api-key
+      - ALLOWED_API_KEYS=demo-management-layer-api-key
     depends_on:
       - db
     networks:
       - oidcnetwork
 
-  wagtail-demo-1:
-    image: wtd_1:0.1
-    build:
-      context: ../core-integration-demo/
-    command: scripts/waitFor.sh scripts/startDjango.sh
-    environment:
-      # Not current on postgres.
-      - DB_HOST=db
-      - DB_NAME=wagtail_1
-      - DB_USER=wagtail_1
-      - DB_PASSWORD=password
-      - WAGTAIL_SITE_NAME="Springster"
-      - SITE_CODE=springster
-      - WAGTAIL_REDIRECT_URL=http://wagtail-demo-1:8000/
-      - OIDC_RP_CLIENT_ID=client_id_1
-      - OIDC_RP_CLIENT_SECRET=super_client_secret_1
-      - OIDC_OP=http://core-authentication-service:8000
-      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
-      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
-      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
-    depends_on:
-      - db
-      - core-authentication-service
-    volumes:
-        - "../core-integration-demo/:/app/"
-    networks:
-      - oidcnetwork
-
-  wagtail-demo-2:
-    image: wtd_2:0.1
-    build:
-      context: ../core-integration-demo/
-    command: scripts/waitFor.sh scripts/startDjango.sh
-    environment:
-      # Not current on postgres.
-      - DB_HOST=db
-      - DB_NAME=wagtail_2
-      - DB_USER=wagtail_2
-      - DB_PASSWORD=password
-      - WAGTAIL_SITE_NAME="Ninyampinga"
-      - SITE_CODE=ninyampinga
-      - WAGTAIL_REDIRECT_URL=http://wagtail-demo-2:8000/
-      - OIDC_RP_CLIENT_ID=client_id_2
-      - OIDC_RP_CLIENT_SECRET=super_client_secret_2
-      - OIDC_OP=http://core-authentication-service:8000
-      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
-      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
-      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
-    depends_on:
-      - db
-      - core-authentication-service
-    volumes:
-        - "../core-integration-demo/:/app/"
-    networks:
-      - oidcnetwork
+#  wagtail-demo-1:
+#    image: wtd_1:0.1
+#    build:
+#      context: ../core-integration-demo/
+#    command: scripts/waitFor.sh scripts/startDjango.sh
+#    environment:
+#      # Not current on postgres.
+#      - DB_HOST=db
+#      - DB_NAME=wagtail_1
+#      - DB_USER=wagtail_1
+#      - DB_PASSWORD=password
+#      - WAGTAIL_SITE_NAME="Springster"
+#      - SITE_CODE=springster
+#      - WAGTAIL_REDIRECT_URL=http://wagtail-demo-1:8000/
+#      - OIDC_RP_CLIENT_ID=client_id_1
+#      - OIDC_RP_CLIENT_SECRET=super_client_secret_1
+#      - OIDC_OP=http://core-authentication-service:8000
+#      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
+#      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
+#      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
+#    depends_on:
+#      - db
+#      - core-authentication-service
+#    volumes:
+#        - "../core-integration-demo/:/app/"
+#    networks:
+#      - oidcnetwork
+#
+#  wagtail-demo-2:
+#    image: wtd_2:0.1
+#    build:
+#      context: ../core-integration-demo/
+#    command: scripts/waitFor.sh scripts/startDjango.sh
+#    environment:
+#      # Not current on postgres.
+#      - DB_HOST=db
+#      - DB_NAME=wagtail_2
+#      - DB_USER=wagtail_2
+#      - DB_PASSWORD=password
+#      - WAGTAIL_SITE_NAME="Ninyampinga"
+#      - SITE_CODE=ninyampinga
+#      - WAGTAIL_REDIRECT_URL=http://wagtail-demo-2:8000/
+#      - OIDC_RP_CLIENT_ID=client_id_2
+#      - OIDC_RP_CLIENT_SECRET=super_client_secret_2
+#      - OIDC_OP=http://core-authentication-service:8000
+#      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
+#      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
+#      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
+#    depends_on:
+#      - db
+#      - core-authentication-service
+#    volumes:
+#        - "../core-integration-demo/:/app/"
+#    networks:
+#      - oidcnetwork
 
   core-management-layer:
     build:
@@ -136,10 +135,9 @@ services:
       - UI_HOST=core-management-layer
       - JWT_SECRET=management_layer_workaround
       - JWT_AUDIENCE=management_layer_workaround
-      - API_KEY="demo-management-layer-api-key"
-      - ACCESS_CONTROL_API_KEY="demo-access-control-api-key
-      - AUTHENTICATION_SERVICE_API_KEY="demo-authentication-service-api-key"
-      - USER_DATA_STORE_API_KEY="demo-user-data-store-api-key"
+      - ACCESS_CONTROL_API_KEY=demo-management-layer-api-key
+      - AUTHENTICATION_SERVICE_API_KEY=demo-management-layer-api-key
+      - USER_DATA_STORE_API_KEY=demo-management-layer-api-key
     volumes:
       - ../core-management-layer/:/app/
     ulimits:
@@ -158,23 +156,23 @@ services:
     networks:
       - oidcnetwork
 
-  core-management-portal:
-    image: ge-gmp:0.1
-    build:
-      context: ../core-management-portal/
-    command: yarn start
-    environment:
-      - OIDC_RP_CLIENT_ID=client_id_2
-      - OIDC_RP_CLIENT_SECRET=super_client_secret_2
-      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
-      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
-      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
-    depends_on:
-      - core-authentication-service
-    volumes:
-        - "../core-management-portal/:/app/"
-    networks:
-      - oidcnetwork
+#  core-management-portal:
+#    image: ge-gmp:0.1
+#    build:
+#      context: ../core-management-portal/
+#    command: yarn start
+#    environment:
+#      - OIDC_RP_CLIENT_ID=client_id_2
+#      - OIDC_RP_CLIENT_SECRET=super_client_secret_2
+#      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
+#      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
+#      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
+#    depends_on:
+#      - core-authentication-service
+#    volumes:
+#        - "../core-management-portal/:/app/"
+#    networks:
+#      - oidcnetwork
 
   db:
     build:
