Re-enabled services that was commented out

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,61 +65,61 @@ services:
     networks:
       - oidcnetwork
 
-#  wagtail-demo-1:
-#    image: wtd_1:0.1
-#    build:
-#      context: ../core-integration-demo/
-#    command: scripts/waitFor.sh scripts/startDjango.sh
-#    environment:
-#      # Not current on postgres.
-#      - DB_HOST=db
-#      - DB_NAME=wagtail_1
-#      - DB_USER=wagtail_1
-#      - DB_PASSWORD=password
-#      - WAGTAIL_SITE_NAME="Springster"
-#      - SITE_CODE=springster
-#      - WAGTAIL_REDIRECT_URL=http://wagtail-demo-1:8000/
-#      - OIDC_RP_CLIENT_ID=client_id_1
-#      - OIDC_RP_CLIENT_SECRET=super_client_secret_1
-#      - OIDC_OP=http://core-authentication-service:8000
-#      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
-#      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
-#      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
-#    depends_on:
-#      - db
-#      - core-authentication-service
-#    volumes:
-#        - "../core-integration-demo/:/app/"
-#    networks:
-#      - oidcnetwork
-#
-#  wagtail-demo-2:
-#    image: wtd_2:0.1
-#    build:
-#      context: ../core-integration-demo/
-#    command: scripts/waitFor.sh scripts/startDjango.sh
-#    environment:
-#      # Not current on postgres.
-#      - DB_HOST=db
-#      - DB_NAME=wagtail_2
-#      - DB_USER=wagtail_2
-#      - DB_PASSWORD=password
-#      - WAGTAIL_SITE_NAME="Ninyampinga"
-#      - SITE_CODE=ninyampinga
-#      - WAGTAIL_REDIRECT_URL=http://wagtail-demo-2:8000/
-#      - OIDC_RP_CLIENT_ID=client_id_2
-#      - OIDC_RP_CLIENT_SECRET=super_client_secret_2
-#      - OIDC_OP=http://core-authentication-service:8000
-#      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
-#      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
-#      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
-#    depends_on:
-#      - db
-#      - core-authentication-service
-#    volumes:
-#        - "../core-integration-demo/:/app/"
-#    networks:
-#      - oidcnetwork
+  wagtail-demo-1:
+    image: wtd_1:0.1
+    build:
+      context: ../core-integration-demo/
+    command: scripts/waitFor.sh scripts/startDjango.sh
+    environment:
+      # Not current on postgres.
+      - DB_HOST=db
+      - DB_NAME=wagtail_1
+      - DB_USER=wagtail_1
+      - DB_PASSWORD=password
+      - WAGTAIL_SITE_NAME="Springster"
+      - SITE_CODE=springster
+      - WAGTAIL_REDIRECT_URL=http://wagtail-demo-1:8000/
+      - OIDC_RP_CLIENT_ID=client_id_1
+      - OIDC_RP_CLIENT_SECRET=super_client_secret_1
+      - OIDC_OP=http://core-authentication-service:8000
+      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
+      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
+      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
+    depends_on:
+      - db
+      - core-authentication-service
+    volumes:
+        - "../core-integration-demo/:/app/"
+    networks:
+      - oidcnetwork
+
+  wagtail-demo-2:
+    image: wtd_2:0.1
+    build:
+      context: ../core-integration-demo/
+    command: scripts/waitFor.sh scripts/startDjango.sh
+    environment:
+      # Not current on postgres.
+      - DB_HOST=db
+      - DB_NAME=wagtail_2
+      - DB_USER=wagtail_2
+      - DB_PASSWORD=password
+      - WAGTAIL_SITE_NAME="Ninyampinga"
+      - SITE_CODE=ninyampinga
+      - WAGTAIL_REDIRECT_URL=http://wagtail-demo-2:8000/
+      - OIDC_RP_CLIENT_ID=client_id_2
+      - OIDC_RP_CLIENT_SECRET=super_client_secret_2
+      - OIDC_OP=http://core-authentication-service:8000
+      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
+      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
+      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
+    depends_on:
+      - db
+      - core-authentication-service
+    volumes:
+        - "../core-integration-demo/:/app/"
+    networks:
+      - oidcnetwork
 
   core-management-layer:
     build:
@@ -156,23 +156,23 @@ services:
     networks:
       - oidcnetwork
 
-#  core-management-portal:
-#    image: ge-gmp:0.1
-#    build:
-#      context: ../core-management-portal/
-#    command: yarn start
-#    environment:
-#      - OIDC_RP_CLIENT_ID=client_id_2
-#      - OIDC_RP_CLIENT_SECRET=super_client_secret_2
-#      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
-#      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
-#      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
-#    depends_on:
-#      - core-authentication-service
-#    volumes:
-#        - "../core-management-portal/:/app/"
-#    networks:
-#      - oidcnetwork
+  core-management-portal:
+    image: ge-gmp:0.1
+    build:
+      context: ../core-management-portal/
+    command: yarn start
+    environment:
+      - OIDC_RP_CLIENT_ID=client_id_2
+      - OIDC_RP_CLIENT_SECRET=super_client_secret_2
+      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
+      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
+      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
+    depends_on:
+      - core-authentication-service
+    volumes:
+        - "../core-management-portal/:/app/"
+    networks:
+      - oidcnetwork
 
   db:
     build:
