Switch off async debugging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
       context: ../core-management-layer/
     environment:
       - STUBS_CLASS=management_layer.integration.Implementation
-      - PYTHONASYNCIODEBUG=0
+      # - PYTHONASYNCIODEBUG=1
       - ACCESS_CONTROL_API=http://core-access-control:8080/api/v1
       - AUTHENTICATION_SERVICE_API=http://core-authentication-service:8000/api/v1
       - USER_DATA_STORE_API=http://core-user-data-store:8080/api/v1
