Added memcache config for management-layer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -137,6 +137,9 @@ services:
       - ACCESS_CONTROL_API_KEY=demo-management-layer-api-key
       - AUTHENTICATION_SERVICE_API_KEY=demo-management-layer-api-key
       - USER_DATA_STORE_API_KEY=demo-management-layer-api-key
+      - MEMCACHE_HOST=memcache
+      - MEMCACHE_PORT=11211
+      # - SENTRY_DSN=<sentry_dsn_goes_here>
     volumes:
       - ../core-management-layer/:/app/
     ulimits:
