--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,8 @@ services:
       - USER_DATA_STORE_API_KEY=demo-authentication-service-api-key
       - ACCESS_CONTROL_API_KEY=demo-authentication-service-api-key
       - ALLOWED_API_KEYS=demo-management-layer-api-key
+      - ACCESS_CONTROL_API=http://core-access-control:8080/api/v1
+      - USER_DATA_STORE_API=http://core-user-data-store:8080/api/v1
     depends_on:
       - db
     networks:
