--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - DB_URI=postgresql+psycopg2://user_data_store:password@db:5432/user_data_store
       - ALLOWED_API_KEYS=demo-authentication-service-api-key,demo-management-layer-api-key
+      # - SENTRY_DSN=<sentry_dsn_goes_here>
     volumes:
       - ../core-user-data-store/:/app/
     ulimits:
@@ -31,6 +32,7 @@ services:
     environment:
       - DB_URI=postgresql+psycopg2://access_control:password@db:5432/access_control
       - ALLOWED_API_KEYS=demo-authentication-service-api-key,demo-management-layer-api-key
+      # - SENTRY_DSN=<sentry_dsn_goes_here>
     volumes:
       - ../core-access-control/:/app/
     restart: on-failure
