--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,8 +55,6 @@ services:
       # NOTE: we bootstrap our database container with some dbs.
       - DB_DEFAULT=ENGINE=django.db.backends.postgresql,NAME=authentication_service,USER=authentication_service,PASSWORD=password,HOST=db,PORT=5432
       - ALLOWED_HOSTS=*
-      - WAGTAIL_1_IP=http://wagtail-demo-1:8000/oidc/callback/
-      - WAGTAIL_2_IP=http://wagtail-demo-2:8000/oidc/callback/
       - CELERY_BROKER_URL=redis://redis:6379/0
       - USER_DATA_STORE_API_KEY=demo-authentication-service-api-key
       - ACCESS_CONTROL_API_KEY=demo-authentication-service-api-key
@@ -65,6 +63,11 @@ services:
       - USER_DATA_STORE_API=http://core-user-data-store:8080/api/v1
       - EMAIL_HOST_USER=somedummydata
       - EMAIL_HOST_PASSWORD=somedummydata
+      # The varaibles below are not used in production, just the docker-compose env
+      - WAGTAIL_1_CALLBACK=http://wagtail-demo-1:8000/oidc/callback/
+      - WAGTAIL_2_CALLBACK=http://wagtail-demo-2:8000/oidc/callback/
+      - WAGTAIL_1_LOGOUT_REDIRECT=http://wagtail-demo-1:8000/
+      - WAGTAIL_2_LOGOUT_REDIRECT=http://wagtail-demo-2:8000/
     depends_on:
       - db
     networks:
