Added SMTP server and updated settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,8 +62,7 @@ services:
       - ALLOWED_API_KEYS=demo-management-layer-api-key
       - ACCESS_CONTROL_API=http://core-access-control:8080/api/v1
       - USER_DATA_STORE_API=http://core-user-data-store:8080/api/v1
-      - EMAIL_HOST_USER=somedummydata
-      - EMAIL_HOST_PASSWORD=somedummydata
+      - EMAIL_HOST=smtp
       # The varaibles below are not used in production, just the docker-compose env
       - WAGTAIL_1_CALLBACK=http://wagtail-demo-1:8000/oidc/callback/
       - WAGTAIL_2_CALLBACK=http://wagtail-demo-2:8000/oidc/callback/
@@ -71,6 +70,7 @@ services:
       - WAGTAIL_2_LOGOUT_REDIRECT=http://wagtail-demo-2:8000/
     depends_on:
       - db
+      - smtp
     networks:
       - oidcnetwork
 
@@ -83,11 +83,13 @@ services:
     command: celery worker # scripts/waitFor.sh celery -A project worker -l info
     environment:
       - ALLOWED_API_KEYS=demo-management-layer-api-key
+      - DB_DEFAULT=ENGINE=django.db.backends.postgresql,NAME=authentication_service,USER=authentication_service,PASSWORD=password,HOST=db,PORT=5432
       - REDIS_URI=redis://redis:6379/0
       - CELERY_APP=project
       - CELERY_BROKER_URL=redis://redis:6379/0
-      - EMAIL_HOST_USER=somedummydata
-      - EMAIL_HOST_PASSWORD=somedummydata
+      - EMAIL_HOST=smtp
+      # - EMAIL_USER=
+      # - EMAIL_PASSWORD=
       - USER_DATA_STORE_API_KEY=demo-authentication-service-api-key
       - ACCESS_CONTROL_API_KEY=demo-authentication-service-api-key
       - ACCESS_CONTROL_API=http://core-access-control:8080/api/v1
@@ -95,6 +97,7 @@ services:
       - C_FORCE_ROOT=true
     depends_on:
       - db
+      - smtp
     networks:
       - oidcnetwork
 
@@ -244,6 +247,13 @@ services:
       - "3128"
     ports:
       - "${SQUID_PORT}:3128"
+    networks:
+      - oidcnetwork
+
+  smtp:
+    image: "namshi/smtp"
+    expose:
+      - "25"
     networks:
       - oidcnetwork
 
