--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,7 @@ services:
       - ACCESS_CONTROL_API=http://core-access-control:8080/api/v1
       - USER_DATA_STORE_API=http://core-user-data-store:8080/api/v1
       - EMAIL_HOST=smtp
+      # - SKIP_MIGRATIONS=1  Set this on QA, but not for docker compose.
       # The varaibles below are not used in production, just the docker-compose env
       - WAGTAIL_1_CALLBACK=http://wagtail-demo-1:8000/oidc/callback/
       - WAGTAIL_2_CALLBACK=http://wagtail-demo-2:8000/oidc/callback/
@@ -88,6 +89,7 @@ services:
       - CELERY_APP=project
       - CELERY_BROKER_URL=redis://redis:6379/0
       - EMAIL_HOST=smtp
+      - SKIP_MIGRATIONS=1
       # - EMAIL_USER=
       # - EMAIL_PASSWORD=
       # - EMAIL_USE_TLS=
