Added new env variable used by the Management Layer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -180,6 +180,7 @@ services:
       - MEMCACHE_HOST=memcache
       - MEMCACHE_PORT=11211
       # - SENTRY_DSN=<sentry_dsn_goes_here>
+      - MANAGEMENT_PORTAL_CLIENT_ID=management_portal
     volumes:
       - ../core-management-layer/:/app/
     ulimits:
