Run HTTP daemon in all environments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -277,6 +277,7 @@ services:
       - "${ROBOT_PORT}:8000"
     environment:
       - ENVIRONMENT=docker
+      - AUTHENTICATION_SERVICE_API_KEY=demo-management-layer-api-key
     volumes:
       - ./robot:/app/
     restart: on-failure
