--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,9 @@ services:
       - REDIS_URI=redis://redis:6379/0
       # NOTE: we bootstrap our database container with some dbs.
       - DB_DEFAULT=ENGINE=django.db.backends.postgresql,NAME=authentication_service,USER=authentication_service,PASSWORD=password,HOST=db,PORT=5432
+      - DEFAULT_STORAGE=true
+      - STATIC_ROOT="/app/static"
+      - MEDIA_ROOT="/app/media"
       - ALLOWED_HOSTS=*
       - CELERY_BROKER_URL=redis://redis:6379/0
       - USER_DATA_STORE_API_KEY=demo-authentication-service-api-key
