Comment out the core-robot service for now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -274,32 +274,32 @@ services:
 
   # The name "core-robot" was chosen so that this container is accessible via
   # the squid proxy, which are configured to service URLs starting with "core-".
-  core-robot:
-    build:
-      context: .
-    ports:
-      - "${ROBOT_PORT}:8000"
-    environment:
-      - ENVIRONMENT=docker
-      - AUTHENTICATION_SERVICE_API_KEY=demo-management-layer-api-key
-    volumes:
-      - ./robot:/app/
-    restart: on-failure
-    command: test_runner.sh
-    depends_on:
-      - db
-      - memcache
-      - redis
-      - smtp
-      - core-access-control
-      - core-authentication-service
-      - core-user-data-store
-      - core-management-layer
-      - core-management-portal
-      - wagtail-demo-1
-      - wagtail-demo-2
-    networks:
-      - oidcnetwork
+  #core-robot:
+  #  build:
+  #    context: .
+  #  ports:
+  #    - "${ROBOT_PORT}:8000"
+  #  environment:
+  #    - ENVIRONMENT=docker
+  #    - AUTHENTICATION_SERVICE_API_KEY=demo-management-layer-api-key
+  #  volumes:
+  #    - ./robot:/app/
+  #  restart: on-failure
+  #  command: test_runner.sh
+  #  depends_on:
+  #    - db
+  #    - memcache
+  #    - redis
+  #    - smtp
+  #    - core-access-control
+  #    - core-authentication-service
+  #    - core-user-data-store
+  #    - core-management-layer
+  #    - core-management-portal
+  #    - wagtail-demo-1
+  #    - wagtail-demo-2
+  #  networks:
+  #    - oidcnetwork
 
 # This network definition limits the IP range that can be used.
 # This is convenient because we need to refer to the IP range in the
