--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,6 +110,36 @@ services:
     networks:
       - oidcnetwork
 
+  core-corporate-site:
+    image: corporate-site:0.1
+    build:
+      context: ../girleffect.org/
+    environment:
+      - REDIS=redis://redis:6379/1
+      - ALLOWED_HOSTS=core-corporate-site
+      - DATABASE_URL=postgres://core_corporate_site:password@db/core_corporate_site
+      - CFG_APP_NAME=girleffect
+      - DJANGO_SETTINGS_MODULE=girleffect.settings.dev
+      - EMAIL_HOST=smtp
+      - PRIMARY_HOST=core-corporate-site
+      - SERVER_EMAIL=no-reply@gehosting.org
+      - SECRET_KEY=aiMohghaik3AesooLoal6vohchahcahx
+      - WAGTAIL_REDIRECT_URL=http://core-corporate-site/
+      - OIDC_RP_CLIENT_ID=corporate_site
+      - OIDC_RP_CLIENT_SECRET=corporate_site_secret
+      - OIDC_OP=http://core-authentication-service:8000
+      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
+      - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
+      - OIDC_OP_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
+      - OIDC_OP_LOGOUT_URL=http://core-authentication-service:8000/openid/end-session/
+    depends_on:
+      - db
+      - core-authentication-service
+    volumes:
+        - "../girleffect.org/:/app/"
+    networks:
+      - oidcnetwork
+
   wagtail-demo-1:
     image: wtd_1:0.1
     build:
