--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 # Refer to the .env file for IP and port-related definitions
 
@@ -305,6 +305,27 @@ services:
       - "${PACSERVER_PORT}:8000"
     environment:
       - PYTHONUNBUFFERED=1
+    networks:
+      - oidcnetwork
+
+  prometheus:
+    image: "prom/prometheus:latest"
+    container_name: prometheus
+    build:
+      context: apps/prometheus/
+    expose:
+      - 9090
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./apps/prometheus/:/etc/prometheus/
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/etc/prometheus/console_libraries"
+      - "--web.console.templates=/etc/prometheus/consoles"
+      - "--storage.tsdb.retention=200h"
+      - "--web.enable-lifecycle"
     networks:
       - oidcnetwork
 
