--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -250,6 +250,7 @@ services:
     command: yarn start
     environment:
       - REACT_APP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
+      - REACT_APP_AUTHORIZATION_USER_ENDPOINT=http://core-authentication-service:8000/openid/userinfo/
       - REACT_APP_CLIENT_ID=management_portal
       - REACT_APP_LOGOUT_URL=http://core-authentication-service:8000/openid/end-session/
       - REACT_APP_MANAGEMENT_LAYER=http://core-management-layer:8000
