--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -253,13 +253,11 @@ services:
         - REACT_APP_CLIENT_ID=management_portal
         - REACT_APP_LOGOUT_URL=http://core-authentication-service:8000/openid/end-session/
         - REACT_APP_MANAGEMENT_LAYER=http://core-management-layer:8000
-        - REACT_APP_PORTAL_URL=http://core-management-portal:3000/
+        - REACT_APP_PORTAL_URL=http://core-management-portal/
         - REACT_APP_PORTAL_LOGIN_CALLBACK=#/oidc/callback?
     depends_on:
       - core-authentication-service
       - core-management-layer
-    expose:
-      - 3000
     networks:
       - oidcnetwork
 
