Removed port 3000 from GMP dev. Now exposed on 80 like nginx.

--- a/docker-compose.core-management-portal.yml
+++ b/docker-compose.core-management-portal.yml
@@ -11,7 +11,7 @@ services:
       - REACT_APP_CLIENT_ID=management_portal
       - REACT_APP_LOGOUT_URL=http://core-authentication-service:8000/openid/end-session/
       - REACT_APP_MANAGEMENT_LAYER=http://core-management-layer:8000
-      - REACT_APP_PORTAL_URL=http://core-management-portal:3000/
+      - REACT_APP_PORTAL_URL=http://core-management-portal/
       - REACT_APP_PORTAL_LOGIN_CALLBACK=#/oidc/callback?
     volumes:
       - ../core-management-portal/:/app/
