--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -206,11 +206,12 @@ services:
     image: dataingestion-site:0.1
     build:
       context: ../core-data-ingestion-service/
+    command: scripts/startDjango.sh
     environment:
       - DATABASE_URL=postgres://core_data_ingestion_service:password@db/core_data_ingestion_service
       #- SECRET_KEY=
-      - OIDC_RP_CLIENT_ID=
-      - OIDC_RP_CLIENT_SECRET=
+      - OIDC_RP_CLIENT_ID=core_data_ingestion
+      - OIDC_RP_CLIENT_SECRET=core_data_ingestion_secret
       - OIDC_OP=http://core-authentication-service:8000
       - OIDC_OP_AUTHORIZATION_ENDPOINT=http://core-authentication-service:8000/openid/authorize/
       - OIDC_OP_TOKEN_ENDPOINT=http://core-authentication-service:8000/openid/token/
