--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -206,9 +206,8 @@ services:
     image: dataingestion-site:0.1
     build:
       context: ../core-data-ingestion-service/
-    command: scripts/startDjango.sh
+    command: scripts/waitFor.sh scripts/startDjango.sh
     environment:
-      - DATABASE_URL=postgres://core_data_ingestion_service:password@db/core_data_ingestion_service
       #- SECRET_KEY=
       - OIDC_RP_CLIENT_ID=core_data_ingestion
       - OIDC_RP_CLIENT_SECRET=core_data_ingestion_secret
